--- a/README
+++ b/README
@@ -2,24 +2,28 @@ This python script takes a list of tv shows, scrapes thetvdb.com and the xbmc my
 
 It then uses BeautifulSoup to search the pirate bay and btjunkie for these episodes, and adds them to deluge via the deluge rpc interface.
 
-Currently, only the mysql xbmc db is supported - it would be trivial to rewrite this to use the standard sqlite db, but as I don't use this I probably won't add support in the foreseeable future.
+Spiderbro can be configured to use either an xbmc sqlite db or an xbmc mysql db - future versions may use the xbmc rpc interface
 
-The script requires that a db schema is available called "torrents" (user/pass is "torrents" too)
-The schema has two tables, urls_seen and finished_shows
+As of V 1.2.0, spiderbro uses an internal sqlite db with the following schema:
+
+The schema has two tables, urls_seen and shows
 
 urls_seen takes the form:
 +----------+-------------+------+-----+---------+-------+
 | Field    | Type        | Null | Key | Default | Extra |
 +----------+-------------+------+-----+---------+-------+
 | showname | varchar(64) | NO   |     | NULL    |       |
-| episode  | varchar(64) | NO   |     | NULL    |       |
+| episode  | integer     | NO   |     | NULL    |       |
+| season   | integer     | NO   |     | NULL    |       |
 | url      | varchar(64) | NO   |     | NULL    |       |
 +----------+-------------+------+-----+---------+-------+
 
-finished_shows takes the form:
-+----------+-------------+------+-----+---------+-------+
-| Field    | Type        | Null | Key | Default | Extra |
-+----------+-------------+------+-----+---------+-------+
-| showname | varchar(64) | NO   |     | NULL    |       |
-+----------+-------------+------+-----+---------+-------+
+shows takes the form:
++-----------+--------------+------+-----+---------+--------+
+| Field     | Type         | Null | Key | Default | Extra  |
++-----------+--------------+------+-----+---------+--------+
+| series_id | integer      | NO   | X   | NULL    |        |
+| showname  | varchar(64)  | NO   |     | NULL    | unique |
+| finished  | integer      | NO   |     | NULL    |        |
++-----------+--------------+------+-----+---------+--------+
 
